# automaton_auditor

./: .gitignore  README.md  pyproject.toml  rubric.json
audit/report_onpeer_generated/: audit_report_20260228_142017.json  audit_report_20260228_142017.md  audit_report_20260228_174738.json  audit_report_20260228_174738.md  audit_report_20260228_175203.json  audit_report_20260228_175203.md
audit/report_onself_generated/: audit_report_20260228_095048.json  audit_report_20260228_095048.md  audit_report_20260228_100932.json  audit_report_20260228_100932.md  audit_report_20260228_101356.json  audit_report_20260228_101356.md  audit_report_20260228_120627.json  audit_report_20260228_120627.md  audit_report_20260228_135542.json  audit_report_20260228_145912.json  audit_report_20260228_145912.md  audit_report_20260228_151533.json  audit_report_20260228_151533.md  audit_report_20260228_155016.json  audit_report_20260228_155016.md  audit_report_20260228_161538.json  audit_report_20260228_161538.md  audit_report_20260228_191939.json  audit_report_20260228_191939.md  audit_report_20260228_192911.json  audit_report_20260228_192911.md
reports/: audit_report.md
src/: graph.py  main.py  state.py
src/graph/: builder.py  nodes.py
src/nodes/: detectives.py  judges.py  judges.py.save  justice.py
src/tools/: doc_tools.py  repo_tools.py
tests/: test_detectives.py
